# playground-track-net

./: CLAUDE.md  README.md  main.py  pyproject.toml
configs/: default.yaml
data/: __init__.py  dataset.py  heatmap.py  transforms.py
docs/: data-sources.md
docs/superpowers/plans/: 2026-03-22-tracknet-v2-data.md  2026-03-22-tracknet-v2-inference.md  2026-03-22-tracknet-v2-model.md  2026-03-22-tracknet-v2-training.md  2026-03-22-v5-mdd-module.md  2026-03-22-v5-rstr-assembly.md  2026-03-22-v5-sigmoid-refactor.md
docs/superpowers/specs/: 2026-03-21-tracknet-ball-tracking-design.md  2026-04-10-implementation-testing-guide.md  2026-04-10-multi-object-scoring-system.md  2026-04-10-mvp-implementation-guide.md  README-multi-object-scoring.md  (+2 more)
inference/: __init__.py  event_detector.py  postprocess.py  scoring.py  tracker.py  video_preprocess.py
models/: __init__.py  backbone.py  ball_tracker_wrapper.py  losses.py  mdd.py  player_detector.py  rstr.py  tracknet.py
models/trackers/: __init__.py  simple_tracker.py
results/: 2026-04-11_084928_minimal.json  2026-04-11_162608_minimal.json  2026-04-11_165419_minimal.json  2026-04-11_171306_minimal.json  2026-04-11_174745_minimal.json
tests/: conftest.py  test_ball_tracker_wrapper.py  test_console_logger.py  test_data.py  test_event_detector.py  test_inference.py  test_json_exporter.py  test_mdd.py  test_models.py  test_player_detector.py  test_scoring.py  test_simple_tracker.py  test_training.py
training/: __init__.py  evaluate.py  trainer.py
utils/: __init__.py  console_logger.py  json_exporter.py  visualization.py
